# fast-c-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/fcg/: fcg.h  fcg.md  types.h
include/fcg-cpp/: Binding.hpp  fcg-cpp.hpp
include/fcg-cpp/Graphics/: Buffer.hpp  BufferLayout.hpp  GDI.hpp  Machine.hpp  Surface.hpp
include/fcg-cpp/Utility/: NoCopy.hpp
include/fcg/graphics/: buffer.h  destructor.h  device.h  gdi.h  pipeline.h  surface.h
include/fcg/memory/: queue.h  stack.h
src/: assert.c  main.c
src/fcg/: CMakeLists.txt  main.c
src/fcg-cpp/: CMakeLists.txt  main.cpp
src/fcg-cpp/Graphics/: Buffer.cpp  BufferLayout.cpp  Machine.cpp
src/fcg/graphics/: device.c  surface.c
src/fcg/graphics/OpenGL/: device.c  gdi.c
src/fcg/graphics/Vulkan/: buffer.c  device.c  gdi.c  instance.c  pipeline.c  surface.c
src/fcg/memory/: stack.c
src/graphics/: device.c  gdi.c  pipeline.c  surface.c
src/graphics/Vulkan/: buffer.c  device.c  device.md  gdi.c  instance.h  pipeline.c  surface.c
src/memory/: queue.c  stack.c
